# libvmod-example

./: README.rst  configure.ac  vmod-dynamic.spec
src/: Makefile.am  vmod_dynamic.c  vmod_dynamic.vcc
src/tests/: test01.vtc
